--- a/api/package.json
+++ b/api/package.json
@@ -4,32 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "dev": "nodemon server.js",
+    "seed": "npx sequelize-cli db:seed:all",
+    "migrate": "npx sequelize-cli db:migrate --config config/database.js --migrations-path app/database/migrations"
   },
-  "author": "Henry",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
-  },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "ioredis": "^4.19.2",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "pg": "^8.7.1",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
-    "supertest-session": "^4.1.0",
-    "mocha": "^8.2.1",
-    "chai": "^4.2.0",
-    "nodemon": "^2.0.6",
-    "supertest": "^6.0.1"
+    "chai": "^4.3.4",
+    "faker": "^5.5.3",
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.3.0",
+    "supertest": "^6.1.6",
+    "supertest-session": "^4.1.0"
   }
 }
