--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "redux-devtools-extension": "^2.13.9",
     "stylus": "^0.55.0"
   }
