--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.3.0",
+    "sequelize-test-helpers": "^1.4.2",
     "supertest": "^6.1.6",
     "supertest-session": "^4.1.0"
   }
